Actualizacion eliminarEnemigo()